# ChARGe

./: CONTRIBUTORS  LICENSE  README.md  mkdocs.yml  pyproject.toml
charge/: Experiment.py  __init__.py  _tags.py  _to_mcp.py  _utils.py  inspector.py  install.py
charge/clients/: AgentPool.py  Client.py  autogen.py  autogen_utils.py
charge/experiments/: AutoGenExperiment.py  AutogentExp.py  AutogentExperiment.py  Experiment.py  LMOExperiment.py  RetrosynthesisExperiment.py  __init__.py
charge/servers/: AiZynthTools.py  FLASKv2_reactions.py  README.md  SMARTS_reactions.py  SMARTS_reactions_utils.py  SMILES.py  SMILES_utils.py  ServerToolkit.py  get_chemprop2_preds.py  log_progress.py  molecular_generation_server.py  molecular_property_utils.py  molecule_pricer.py  retrosynthesis_reaction_server.py  server_utils.py
charge/tasks/: LMOTask.py  RetrosynthesisTask.py  Task.py
charge/utils/: helper_funcs.py  system_utils.py
docs/: LICENSE.md  index.md
examples/Molecule_Generation/: README.md  main.py
examples/Multi_Server_Experiments/: main.py  stdio_server_2.py
examples/Multi_Turn_Chat/: README.md  main.py  mol_tool_server.py
examples/Retrosynthesis/: README.md  main.py
examples/SSE_MCP/: main.py
examples/aizynthfinder/: README.md  aizynth_server.py  main.py
examples/flaskv2/: README.md  main.py
experiments/LegacyExperiments/: README.md  autogen_mol_client.py  autogen_reaction_client.py  mol_client.py  mol_server.py  reaction_client.py  reaction_server.py  requirements.txt
experiments/Molecule_Generation/: LMOExperiment.py  README.md  helper_funcs.py  main.py  mol_server.py
experiments/Multi_Server_Experiments/: README.md  main.py  sse_server_1.py  sse_server_2.py  stdio_server_1.py  stdio_server_2.py
experiments/Multi_Turn_Chat/: main.py  mol_tool_server.py
experiments/Retrosynthesis/: README.md  RetrosynthesisExperiment.py  main.py  reaction_server.py
scripts/: gen_ref_pages.py
(+11 files in other folders)
