[project]
name = "charge"
version = "0.1.0"
description = "ChARGe: Chemistry-tool for Automated Reasoning and Generation"
authors = []
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.10.0",
    "jsonschema>=4.17.3",
    "loguru>=0.7.0",
]

[tool.setuptools]
packages = ["charge"]

[project.optional-dependencies]
ollama = ["ollama>=0.5.0"]
gemini = ["google-genai >=1.19.0"]
autogen = ["autogen-agentchat>=0.7.0", "autogen-core>=0.7.0", "autogen-ext>=0.7.0", "openai>=2.0.0", "tiktoken>=0.10.0"]
rdkit = ["rdkit>=2025.3.6"]

all = ["charge[ollama,gemini,autogen,rdkit]"]
